2010-07-12  Sergio Martin <sergio.martin@artica.es>

	* godmode/reporting/visual_console_builder.php: fixed the
	reset of the size when change a visual map background

2010-07-12  Dario Rodriguez  <dario.rodriguez@artica.es>

	* operation/search_results.php: fixed bug in search with zero matches
	and filtering by: maps, reports or graphs.
	Fixes: #3025607

2010-07-12  Dario Rodriguez  <dario.rodriguez@artica.es>

	* operation/agentes/estado_agente.php: fixed bug with pagination offset
	and search.
	Fixes: #3014703

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* operation/agentes/ver_agente.php: added hook to collection enterprise.

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: added hash2 parameter for to use in
	directory navigation.

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_filemanager.php: cleaned source code. And added function
	"read_recursive_dir" to give a content of dir in a array.
	
	* include/functions_config.php: added $config['collection_max_size'].

2010-07-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/networkmap.php: fixed order in combo box of zoom
	page of Network Map
	Fixes: #3026857

2010-07-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/agentes/networkmap.php: fixed changing map layout type when 
	you pass from full screen to normal screen or backwards
	Fixes: #3013601

2010-07-08  Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/reporting/visual_console_builder.editor.php: fixed order in 
	Period combo box of Module Graph
	Fixes: #3014274

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/servers/plugin.php: fixed the description text of ajax return
	when translate the &gt; or &lt; to < or > instead to keep the entity.
	Fixes: #3026785

2010-07-08  Miguel de Dios  <miguel.dedios@artica.es>

	* install.php: added to check zip library for the filemanager.
