@@ -1,3 +1,7 @@
+2010-07-12  Miguel de Dios  <miguel.dedios@artica.es>
+
+	* operation/agentes/ver_agente.php: re-ordered the tabs. 
+
 2010-07-12  Sergio Martin <sergio.martin@artica.es>
 
 	* godmode/reporting/visual_console_builder.php: fixed the
